<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.kousalya.swiggy.activity.FilterActivity">

    <RelativeLayout
        android:id="@+id/content_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/topmenu_background"
     >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/teamlayout"
            android:background="@drawable/topmenu_background"

            >
            <TextView
                android:id="@+id/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:layout_margin="@dimen/dimen_8dp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />
            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_margin="@dimen/dimen_8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/checkboxlayout"
            android:layout_below="@+id/teamlayout"
            android:layout_margin="@dimen/dimen_16dp"
            android:layout_centerHorizontal="true">

            <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a2"
            android:text="@string/a2"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/management"
            android:text="@string/management"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operations"
            android:text="@string/operation"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/technology"
            android:text="@string/technology"
            />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/applyButton"
        android:layout_below="@+id/checkboxlayout"
        android:layout_gravity="center"
        android:text="@string/apply"
        android:layout_margin="@dimen/dimen_8dp"
        />


</LinearLayout>
