<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kousalya.swiggy.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topmenu_background"
        android:orientation="horizontal"
        android:id="@+id/topmenubar"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latest"
            android:text="@string/latest"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/dimen_16dp"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:id="@+id/view"
            android:background="@android:color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/popular"
            android:text="@string/popular"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/dimen_16dp"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filter"
                android:text="@string/filter"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/filter_outline_mdpi"
                android:layout_margin="@dimen/dimen_16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/dimen_8dp"
        tools:listitem="@layout/row_item_post"/>

</LinearLayout>
